Fix(BotMode): Remove CSS padding in display
Removes `padding` in the `display` component of the Bot Mode to fix layout issues.

--- a/frontend/srcs/game/components/BotMode/BotMode.css
+++ b/frontend/srcs/game/components/BotMode/BotMode.css
@@ -93,6 +93,10 @@
   }
 
 }
+
+.css-uiwrfz {
+  padding: 0px !important;
+}
 /* .container-bootmode {
   width: 100%;
   height: 100%;
